--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@types/node": "^16.11.43",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
-    "icandev-js-sdk": "file:src/icandev-js-sdk-v1.0.58.tgz",
+    "icandev-js-sdk": "file:src/icandev-js-sdk.tgz",
+    "mobx": "^6.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
