--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^2.2.4",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
@@ -15,13 +16,16 @@
     "@types/node": "^16.11.43",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "dotenv": "^16.0.1",
     "icandev-js-sdk": "file:src/icandev-js-sdk.tgz",
     "mobx": "^6.6.1",
+    "mobx-react": "^7.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
-    "telegraf": "^4.8.5",
+    "telegraf": "^4.8.6",
     "telegram-webapps-types": "^1.0.5",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
