--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "icandev-js-sdk": "file:src/icandev-js-sdk.tgz",
     "mobx": "^6.6.1",
     "mobx-react": "^7.5.2",
+    "next-routes": "^1.4.2",
     "react": "^18.2.0",
     "react-date-picker": "^8.4.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "telegraf": "^4.8.6",
