--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
   },
   "devDependencies": {
     "@types/react-datepicker": "^4.4.2",
+    "prettier": "2.7.1",
     "typings-for-css-modules-loader": "^1.7.0"
   }
 }
